src/app/listings.scss
@import "variables.scss";

#container-listings {
  background-color: $dark-background-color;

  strong {
    font-weight: 700;
  }

	#listings-content {
	  position: relative;
    margin-top: -1046px;
  }

	#gallery-arrow-left {
	  width: 44%;
	  margin-right: -5px;
	}

	#gallery-arrow-right {
	  width: 44%;
	}

	.gallery-controls {
	  width: 14%;
	  position: absolute;
	  bottom: 10px;
	  right: 10px;
	}

	.info-image-gallery {
	  width: 50%;
	  float: right;
	  position: relative;
	  > .gallery-controls {
	    position: absolute;
	    bottom: 10px;
	    right: 10px;
	  }
	}

	.gallery-info {
	  width: 270px;
	}

	#header-listings {
	  background-image: url(../images/listings-bg.jpg);
	  &:after {
	  	display: block;
	  	content: " ";
	  	position: absolute;
	  	bottom: 0;
	  	left: 0;
	  	height: 100px;
	  	width: 100%;
	  	background-image: linear-gradient(to bottom, rgba($dark-background-color, 0), rgba($dark-background-color, 1));
	  }
  }

  #header-text-listings {
		max-width: 90%;
	  text-align: center;
	  font-family: $font-brand;
	  color: $background-color;
	  font-size: 4em;
  }

  #listings-sidebar {
	  width: 33%;
	  padding: 0 12px;
  }

  #listings-info {
    width: 66%;
    padding: 0 12px;
  }

  .sidebar-header {
    margin: 0;
    padding: 14px;
    padding-bottom: 10px;
    font-weight: lighter;
    opacity: .99;
  }

  .subdued {
    opacity: .90;
  }

  .menu-top {
    background-image: url(../images/listings-cta-bg.jpg);
    padding-top: 4px;
    padding-bottom: 14px;
  }

  .menu {
	  background-color: $primary-color;
	  padding-bottom: 12px;
	  font-weight: lighter;
  }

  .light-line {
	  border-style: solid;
	  opacity: .9;
	  width: 94%;
  }

  .logo-upper-left {
	  position: absolute;
	  top: 37px;
	  left: 37px;
	  height: 11px;
	  z-index: 2;
  }

  .bond-list {
	  list-style-type: none;
	  margin: 0;
	  padding: 0;
	  > li {
	    padding: 14px;
	    font-size: small;
	    font-weight: lighter;
	    opacity: .8;
	  }

	  > hr {
	    border-color: #c35440;
	    opacity: .5;
	    width: 94%;
	    border-style: solid;
	  }
  }

  .menu {
	  color: $background-color;
	  font-family: $font-brand;
	  letter-spacing: $title-letter-spacing;
	  padding: 20px;
  }

  .info-text {
	  float: left;
	  font-weight: lighter;
	  width: 50%;
	}

	.info-box {
	  background-color: $primary-color;
	  display: block;
	  padding: 21px 14px;
	  color: white;
	  overflow: hidden;
	  margin-bottom: 24px;
	}

  .cool-button {
	  display: block;
	  margin-left: auto;
	  margin-right: auto;
	  padding: 14px 8px;
	  margin: 20px 12px 12px 12px;
	  color: #fff;
	  border: 2px solid #fff;
	  text-align: center;
	  outline: none;
	  text-decoration: none;
	  font-size: small;
  }

  @media screen and (max-width: 1130px) {
	  #content {
	    top: 1062px;
	  }

	  #listings-content {
	    margin-top: -1700px;
	  }

	  #listings-sidebar {
	    width: 90%;
	  }

	  #listings-info {
	    width: 90%;
	  }
  }
}

